Remove dependencies which are not used too much